# RamanLib

./: .readthedocs.yaml  CITATION.cff  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/api/: index.doctree  modules.doctree  ramanlib.analysis.doctree  ramanlib.calc.doctree  ramanlib.calib.doctree  ramanlib.core.doctree  ramanlib.doctree  ramanlib.plot.doctree  ramanlib.utils.doctree
docs/_build/doctrees/guides/: example_notebook.doctree
docs/_build/doctrees/usage/: installation.doctree  (+1 more)
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/api/: index.rst  modules.rst  ramanlib.analysis.rst  ramanlib.calc.rst  ramanlib.rst
docs/guides/: example_notebook.ipynb
src/.ipynb_checkpoints/: example_notebook-checkpoint.ipynb
src/ramanlib/: __init__.py  analysis.py  calc.py  calib.py  core.py  plot.py  utils.py
src/ramanlib/.ipynb_checkpoints/: __init__-checkpoint.py  analysis-checkpoint.py  calc-checkpoint.py  calib-checkpoint.py  core-checkpoint.py  plot-checkpoint.py
tests/: example_notebook.ipynb
tests/CLS_example_data/: ethanol 10s 1_ 3acc 532nm 1200lmm extended range 200-3600 spot 1.wdf  grating 10s 50_ 3acc 532nm 1200lmm extended range 200-3600 spot 1.wdf  water 10s 10_ 3acc 532nm 1200lmm extended range 200-3600 spot 3.wdf  water and ethanol 10s 10_ 3acc 532nm 1200lmm extended range 200-3600 spot 1.wdf
(+46 files in other folders)
